# test_project_ivi

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt
allure-results/: 0244b529-976c-4044-9e19-209248b1ed88-result.json  05aa2d05-34f4-4938-9fde-799755e66479-attachment.txt  05b65125-949c-4cb9-a01f-9ea05f2e267d-container.json  0ce114e9-fcff-4ee1-b68e-289d8e2312a9-attachment.html  16993718-417e-4427-bcaa-68bf05612cee-container.json  242409d4-623b-4111-a4f0-56a85607c3ef-attachment.html  326a2c2d-4f99-4261-b6ac-7cbef90cd67a-result.json  3822b1de-473a-4399-b741-eee1caab8657-container.json  3e2d3d82-10bd-41cf-8ac5-cf4ccaa31da5-attachment.html  4892c8c5-f022-43c8-8e19-975a385602a3-container.json  53341e0d-fb63-463e-9d7a-733bd4f50b1e-container.json  53778db7-19a5-432a-a1a5-c429b32982de-result.json  5ce71555-e3f5-4f20-b265-d1818c23dee8-result.json  693ce113-1e04-49ab-a189-27d061b07b23-attachment.html  69c92a69-1c53-48ca-a6cf-ae1508e532b9-result.json  74d4306f-26b5-44d6-b26c-d5c1956a1030-attachment.html  80be5a68-06eb-4da5-bfdd-e9411d008e7d-attachment.txt  819853ec-bf00-4304-b66c-28219a8fffeb-container.json  826c43a2-f510-42bb-ae82-586f3d36a055-result.json  87ac92c0-8742-4e8a-95c0-257bab3f3ac5-attachment.html  8acd4772-7d27-4f20-b9af-3347cc88647e-attachment.html  959194a8-418f-442f-aa41-ee45a92578e8-attachment.txt  9f0d65f8-2a75-4d3e-acc3-5d68943f66a7-container.json  a1cb32c0-2012-4b2f-919a-f83b6c4ecd4f-result.json  b0ddad8f-9eac-48c5-a6cc-5659ef1b302d-attachment.html  bf9ac638-7bd0-42c9-95af-36b47aa7ae89-attachment.html  (+6 more)
pages/: main_page.py
(+47 files in other folders)
